--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Mika Sormunen <mika@halian.fi>",
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.3.0",
     "gatsby-plugin-gatsby-cloud": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
@@ -12,6 +13,7 @@
     "gatsby-plugin-offline": "^5.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-styled-components": "^5.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
     "prop-types": "^15.7.2",
